--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Coil Image Caching</string>
+
+    <!-- Main -->
+    <string name="clear_image_cache">Clear Image Cache</string>
 </resources>
